--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@ code {
 
 /* NAVBAR */
 
+.navLink {
+  text-decoration: underline;
+  color: white;
+}
+
 .navbar {
   display: flex;
   width: full;
@@ -62,4 +67,46 @@ code {
   align-items: center;
   background-color: #f6f6f623;
   border-radius: 20px;
+}
+
+.buttonContainer button {
+  height: 45px;
+  border-radius: 8px;
+  background: #ffffff9d;
+  color: rgb(248, 112, 0);
+  cursor: pointer;
+  padding: 0 20px;
+  font-size: x-large;
+  font-weight: bolder;
+  text-decoration: underline;
+}
+
+/* RecipieList */
+
+.recipieList {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+/* RecipieListContainer */
+.recipieListContainer {
+  width: 300px;
+  margin: 30px;
+  display: flex;
+}
+
+.recipieListContainer img {
+  max-width: 120px;
+  object-fit: contain;
+  border-radius: 10px;
+}
+
+.recipieListContainer div {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 0 20px 0
 }
